<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_custom_picture_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/button_from_camera"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_from_camera_content" />

        <Button
            android:id="@+id/button_from_library"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_from_library_content" />

        <ImageView
            android:id="@+id/customImageContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:contentDescription="@string/image_view_description" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/button_ok"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@android:string/ok" />
    </LinearLayout>

</RelativeLayout>