<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0" >

            <Button
                android:id="@+id/button_email_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:background="@drawable/button_inactive"
                android:text="@string/button_email_view_switcher" />

            <Button
                android:id="@+id/button_sms_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:background="@drawable/button_custom"
                android:text="@string/button_sms_view_switcher" />
        </LinearLayout>

        <ViewSwitcher
            android:id="@+id/message_view_switcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_background" >

            <RelativeLayout
                android:id="@+id/email_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                
                <TextView
                    android:id="@+id/title_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/title_email_sender"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/email_textfield"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_email"
                    android:ems="10"
                    android:hint="@string/textview_to_hint"
                    android:inputType="textEmailAddress" />
                
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/sms_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/title_sms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/title_sms_sender"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/phone_textfield"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_sms"
                    android:ems="10"
                    android:hint="@string/textview_to_hint"
                    android:inputType="phone" >

                    <requestFocus />
                </EditText>
            </RelativeLayout>
        </ViewSwitcher>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <EditText
            android:id="@+id/message_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:ems="10"
            android:hint="@string/textview_to_message" />

        <Button
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:text="@string/button_send" />
    </LinearLayout>

</RelativeLayout>