<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/end_game_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_endgame"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/end_game_label"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:textColor="@color/color_light_grey" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/button_play_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:background="@drawable/button_custom"
            android:text="@string/button_play_again_content" />

        <Button
            android:id="@+id/button_back_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:background="@drawable/button_custom"
            android:text="@string/button_back_home_content" />
    </LinearLayout>

</RelativeLayout>